--- a/index.html
+++ b/index.html
@@ -206,12 +206,7 @@
             </div>
             <div class="section-content">
                 <hr>
-                <p>Hello! I'm Nikunj Gupta, a high school senior fueled by an unwavering passion for computer science. Throughout my 
-                    high school career, I've immersed myself in the world of programming, developing skills in Java, Python and HTML.
-                    These skills have provided me with a strong foundation to embark on exciting coding projects, many of which you can 
-                    explore down below. These projects have not only refined my coding skills but further ignited my curiosity to delve 
-                    deeper into the diverse realms of computer science. As the future progresses, I am dedicated to remaining at the forefront
-                    of technological advancements and contributing my insights to shape the future of this transformative field.
+                <p>Hello! I'm Nikunj Gupta, a freshman at the Georgia Institute for Technology. Throughout my career, I've immersed myself in the world of programming, developing skills in Java, Python, HTML and CSS. These skills have provided me with a strong foundation to embark on exciting coding projects that have not only refined my coding skills but further ignited my curiosity. I am dedicated to remaining at the forefront of technological advancements and contributing my insights to shape the future.
                 </p>
             </div>
         </div>
