--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
             </div>
             <div class="section-content">
                 <hr>
-                <p>Hello! I'm Nikunj Gupta, a freshman at the Georgia Institute for Technology. Throughout my career, I've immersed myself in the world of programming, developing skills in Java, Python, HTML and CSS. These skills have provided me with a strong foundation to embark on exciting coding projects that have not only refined my coding skills but further ignited my curiosity. I am dedicated to remaining at the forefront of technological advancements and contributing my insights to shape the future.
+                <p>Hello! I'm Nikunj Gupta, a student at the Georgia Institute for Technology. Throughout my career, I've immersed myself in the world of programming, developing skills in Java, Python, HTML and CSS. These skills have provided me with a strong foundation to embark on exciting coding projects that have not only refined my coding skills but further ignited my curiosity. I am dedicated to remaining at the forefront of technological advancements and contributing my insights to shape the future.
                 </p>
             </div>
         </div>
